--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ mode: dark # default theme "dark" | "light"
 
 # Profile settings
 author:
-  name: dragos & madalina # author name
+  name: appsinacup # author name
   bio: >- # tell to the world
     
   username: username # general username
