--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
 title: appsinacup # site title
 description: >- # site description
-  He's writing in Bahasa about web technology and experience as a journal 
-  for documentation things that he learned, meet him <a href="https://github.com/piharpi" target="_blank" rel="noopener">@github</a>.
+  Two people just like you, but from Romania, and currently living in the Netherlands.
+  Madalina is the artsy girl, and Dragos, the geeky coder.
 lang: en-US # default lang
 timezone: UTC+1 # set your timezone
 image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
-repo: https://github.com/piharpi/jekyll-klise # site repo [optional]
 mode: dark # default theme "dark" | "light"
 
 # Profile settings
@@ -14,15 +13,13 @@ author:
   name: appsinacup # author name
   bio: >- # tell to the world
     
-  username: username # general username
-  github: github_username # github username
-  twitter: twitter_username # twitter username
-  facebook: facebook_username # facebook username
-  email: your-email@email.com # email adress
+  username: appsinacup # general username
+  twitter: appsinacup # twitter username
+  email: appsinacup@gmail.com # email adress
   avatar: /assets/img/avatar.jpg # change with your own avatar
 
 # URL settings
-url: "https://klise.now.sh" #
+url: "https://appsinacup.com/" #
 baseurl:
 permalink: /:title/
 google_analytics: # leave it blank if not wish
