--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >- # site description
   Madalina is the artsy girl, and Dragos, the geeky coder.
 lang: en-US # default lang
 timezone: UTC+1 # set your timezone
-image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
+image: assets/img/avatar_full.jpg # This image used for Open Graph more info https://ogp.me/
 mode: dark # default theme "dark" | "light"
 
 # Profile settings
