--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: appsinacup # site title
 description: >- # site description
-  Two people just like you, but from Romania, and currently living in the Netherlands.
+  Two people from Romania currently living in the Netherlands making games.
   Madalina is the artsy girl, and Dragos, the geeky coder.
 lang: en-US # default lang
 timezone: UTC+1 # set your timezone
