--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
 title: appsinacup # site title
 description: >- # site description
-  Two people from Romania currently living in the Netherlands making games.
-  Madalina is the artsy girl, and Dragos, the geeky coder.
+  TODO
 lang: en-US # default lang
 timezone: UTC+1 # set your timezone
 image: assets/img/avatar_full.jpg # This image used for Open Graph more info https://ogp.me/
-mode: dark # default theme "dark" | "light"
+mode: light # default theme "dark" | "light"
 
 # Profile settings
 author:
